# Sphinx-GitHub-Alerts

./: CODEOWNERS  LICENSE  README.md  WAIVER.txt  pyproject.toml
.github/workflows/: python-publish.yml
sphinx_github_alerts/: __init__.py
src/sphinx_github_alerts/: __init__.py
