[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sphinx-github-alerts"
dynamic=["version"]
authors = [
    { name = "Dennis den Ouden-van der Horst", email = "d.denouden-vanderhorst@tudelft.nl" }
]
description = "This Sphinx extension converts GitHub alerts to Sphinx admonitions."
readme = "README.md"
dependencies = [
    "sphinx"
]
requires-python = ">=3.10"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/sphinx_github_alerts/_version.py"

